--- a/W11_0517.ipynb
+++ b/W11_0517.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNyQ5Tdjq4wTLeLQE3fqu18",
+      "authorship_tag": "ABX9TyNsiWkgh3dWkXaGuJTAX8FB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -88,7 +88,9 @@
         "\n",
         "for text_path in sorted(text_paths):\n",
         "  text_df = pd.read_csv(text_path, sep=\"@\")\n",
-        "  df = pd.concat([df, text_df])"
+        "  df = pd.concat([df, text_df])\n",
+        "\n",
+        "df = df.reset_index().drop(\"index\", axis=1)"
       ],
       "metadata": {
         "id": "VFR08csaLZiY"
@@ -381,10 +383,10 @@
     {
       "cell_type": "code",
       "source": [
-        "sent_df[\"TotalScore\"] = sent_df[\"Score\"].apply(lambda x: x.get(\"compound\"))\n",
-        "sent_df[\"PosScore\"] = sent_df[\"Score\"].apply(lambda x: x.get(\"pos\"))\n",
-        "sent_df[\"NeuScore\"] = sent_df[\"Score\"].apply(lambda x: x.get(\"neu\"))\n",
-        "sent_df[\"NegScore\"] = sent_df[\"Score\"].apply(lambda x: x.get(\"neg\"))"
+        "sent_df[\"TotalScore\"] = sent_df[\"Score\"].apply(lambda x: x[\"compound\"])\n",
+        "sent_df[\"PosScore\"] = sent_df[\"Score\"].apply(lambda x: x[\"pos\"])\n",
+        "sent_df[\"NeuScore\"] = sent_df[\"Score\"].apply(lambda x: x[\"neu\"])\n",
+        "sent_df[\"NegScore\"] = sent_df[\"Score\"].apply(lambda x: x[\"neg\"])"
       ],
       "metadata": {
         "id": "8V0bBlWNUFzr"
