--- a/W11_0517.ipynb
+++ b/W11_0517.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNsiWkgh3dWkXaGuJTAX8FB",
+      "authorship_tag": "ABX9TyMm+o3++sGV7tWm/gZQOOou",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -326,6 +326,57 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# Create sent_df for sentiment analysis\n",
+        "# One sentence per row\n",
+        "\n",
+        "from nltk import sent_tokenize\n",
+        "import nltk\n",
+        "import string\n",
+        "\n",
+        "nltk.download(\"punkt\")\n",
+        "\n",
+        "# Create a new DataFrame `sent_df`\n",
+        "sent_df = df[[\"Book\", \"Chapter\", \"Text\"]]\n",
+        "sent_df = pd.concat([sent_df, sent_df[\"Text\"].apply(sent_tokenize).rename(\"Sentences\")], axis=1)\n",
+        "sent_df = pd.concat([sent_df[\"Sentences\"].apply(pd.Series), sent_df], axis=1)\n",
+        "sent_df = sent_df.drop([\"Text\", \"Sentences\"], axis=1)\n",
+        "sent_df = sent_df.melt(id_vars=[\"Book\", \"Chapter\"], value_name=\"Sentence\")\n",
+        "sent_df = sent_df.drop(\"variable\", axis=1).dropna()\n",
+        "\n",
+        "# Sort rows\n",
+        "sent_df = sent_df.sort_values(by=[\"Book\", \"Chapter\"]).reset_index().drop([\"index\"], axis=1)"
+      ],
+      "metadata": {
+        "id": "awsawt0Jnmt-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Remove punctuations from each sentence\n",
+        "\n",
+        "def remove_punctuations(text):\n",
+        "  for punctuation in string.punctuation:\n",
+        "    text = text.replace(punctuation, \"\")\n",
+        "\n",
+        "  return text\n",
+        "\n",
+        "sent_df[\"Sentence\"] = sent_df[\"Sentence\"].apply(remove_punctuations)\n",
+        "\n",
+        "# Convert all letters to lowercase\n",
+        "sent_df[\"Sentence\"] = sent_df[\"Sentence\"].apply(lambda x: x.lower())"
+      ],
+      "metadata": {
+        "id": "0Z5rAopC1e0S"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "<h3>Load data</h3>"
@@ -333,17 +384,6 @@
       "metadata": {
         "id": "mq_XF2RAbO99"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "sent_df = pd.read_csv(\"sent_df.csv\", sep=\"@\")"
-      ],
-      "metadata": {
-        "id": "X14lgbmjiB5N"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
